@@ -137,6 +137,7 @@ struct Options {
 	bool play_carte_cutscene;
 	bool play_gamesaved_sound;
 	bool restore_memo_cutscene;
+	bool order_inventory_original;
 };
 
 struct Color {
