@@ -102,6 +102,7 @@ static void initOptions() {
 	g_options.play_carte_cutscene = false;
 	g_options.play_gamesaved_sound = false;
 	g_options.restore_memo_cutscene = true;
+	g_options.order_inventory_original = false;
 	// read configuration file
 	struct {
 		const char *name;
@@ -123,6 +124,7 @@ static void initOptions() {
 		{ "play_carte_cutscene", &g_options.play_carte_cutscene },
 		{ "play_gamesaved_sound", &g_options.play_gamesaved_sound },
 		{ "restore_memo_cutscene", &g_options.restore_memo_cutscene },
+		{ "order_inventory_original", &g_options.order_inventory_original },
 		{ 0, 0 }
 	};
 	static const char *filename = "rs.cfg";
