@@ -19,7 +19,7 @@ use_text_cutscenes=false
 # enable playback of PC CD .SEQ cutscenes (use polygon cutscenes if false)
 use_seq_cutscenes=true
 
-# if copy protection is enabled, display the words manual lookup screen (as in DOS SSI version).
+# if copy protection is enabled, display the words manual lookup screen (as in DOS SSI version)
 use_words_protection=false
 
 # white t-shirt for Conrad
@@ -45,3 +45,6 @@ play_gamesaved_sound=true
 
 # restore content from 'MEMO' cutscene
 restore_memo_cutscene=true
+
+# order inventory items as the original game, last grabbed item is at the bottom of the inventory
+order_inventory_original=false
